--- a/tickets.html
+++ b/tickets.html
@@ -94,7 +94,7 @@
     </table>
     
     <div class="booknow">
-      <button type="button" class="continuebtn"><a href="Details.html">continue</a></button>
+      <button type="button" class="continuebtn"><a href="details.html">continue</a></button>
     </div>
   </div>
   <!-- Add this div to your HTML -->
