--- a/donate.html
+++ b/donate.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Turtle Conservation - Donate</h1>
     </header>
-    <img src="TurtleD.jpg" alt="Turtle Image" class="turtle-image">
+    <img src="WhatsApp Image 2023-08-15 at 14.51.00.jpeg" alt="Turtle Image" class="turtle-image">
     <div id="content">
         <h2>Make a Donation</h2>
         <p>Your generous donation will support turtle conservation projects worldwide.</p>
